--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ds@todo.todo">ds</maintainer>
+  <maintainer email="ds110293@163.com">ds</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
